# Biotsavart

./: BotellaMagnetica_Prueba.json  Explicacion_Proyecto.md  LICENSE  README.md  generar_escena.py  pyproject.toml
Biotsavart/: BotellaMagnetica_Prueba.json  Explicacion_Proyecto.md  LICENSE  README.md  generar_escena.py  pyproject.toml
Biotsavart/src/biotsavart/: __main__.py  app.py
Biotsavart/src/biotsavart.egg-info/: PKG-INFO  requires.txt
Biotsavart/src/biotsavart/core/: __init__.py  analytic.py  biot_savart.py  charge.py  geometry.py  grid.py  materials.py  streamlines.py  wire.py
Biotsavart/src/biotsavart/core/__pycache__/: biot_savart._kernel-17.py314.1.nbc  biot_savart._kernel-17.py314.nbi
Biotsavart/src/biotsavart/scene/: __init__.py  io.py  scene.py
Biotsavart/src/biotsavart/ui/: charge_dialog.py  compute_worker.py  dark_theme.qss  dialogs.py  light_theme.qss  main_window.py  properties_panel.py  scene_tree.py  statistics_panel.py
Biotsavart/src/biotsavart/viz/: viewport.py
src/biotsavart/: app.py
src/biotsavart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/biotsavart/core/: __init__.py  analytic.py  biot_savart.py  charge.py  geometry.py  grid.py  materials.py  streamlines.py  wire.py
src/biotsavart/scene/: __init__.py  io.py  scene.py
src/biotsavart/ui/: charge_dialog.py  compute_worker.py  dark_theme.qss  dialogs.py  light_theme.qss  main_window.py  properties_panel.py  scene_tree.py  statistics_panel.py
src/biotsavart/viz/: __init__.py  viewport.py
