[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biotsavart"
version = "0.1.0"
description = "Interactive Biot-Savart magnetic field simulator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.58",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "snakeviz>=2.2"]

[project.scripts]
biotsavart = "biotsavart.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
